@@ -4,14 +4,12 @@ import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.runner.RunWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabase;
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.test.context.TestPropertySource;
-import org.springframework.test.context.junit4.SpringRunner;
 import uk.gov.hmcts.reform.laubackend.cases.domain.CaseSearchAudit;
 
 import java.sql.Timestamp;
@@ -25,7 +23,6 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.springframework.data.domain.PageRequest.of;
 
 @DataJpaTest
-@RunWith(SpringRunner.class)
 @AutoConfigureTestDatabase(replace = AutoConfigureTestDatabase.Replace.NONE)
 @TestPropertySource(properties = {
     "spring.jpa.hibernate.ddl-auto=update",
@@ -67,7 +64,7 @@ class CaseSearchAuditRepositoryTest {
                 valueOf(now().plusDays(50)),
                 getPage()
         );
-        assertThat(caseSearchAuditList.getContent().size()).isEqualTo(1);
+        assertThat(caseSearchAuditList.getContent()).hasSize(1);
         assertThat(caseSearchAuditList.getContent().get(0).getCaseRefs().get(0)).isEqualTo(2L);
     }
 
@@ -80,7 +77,7 @@ class CaseSearchAuditRepositoryTest {
                 valueOf(now().plusDays(50)),
                 getPage()
         );
-        assertThat(caseSearchAuditList.getContent().size()).isEqualTo(1);
+        assertThat(caseSearchAuditList.getContent()).hasSize(1);
         assertThat(caseSearchAuditList.getContent().get(0).getUserId()).isEqualTo("10");
     }
 
@@ -94,7 +91,7 @@ class CaseSearchAuditRepositoryTest {
                 of(1, 10)
         );
         assertThat(caseSearchAuditList.getTotalElements()).isEqualTo(20);
-        assertThat(caseSearchAuditList.getContent().size()).isEqualTo(10);
+        assertThat(caseSearchAuditList.getContent()).hasSize(10);
     }
 
     @Test
@@ -123,11 +120,11 @@ class CaseSearchAuditRepositoryTest {
 
         final List<CaseSearchAudit> caseSearchAuditList = caseSearchAuditRepository.findAll();
 
-        assertThat(caseSearchAuditList.size()).isEqualTo(21);
+        assertThat(caseSearchAuditList).hasSize(21);
         assertThat(caseSearchAuditList.get(20).getTimestamp()).isEqualTo(timestamp);
         assertThat(caseSearchAuditList.get(20).getUserId()).isEqualTo("1");
 
-        assertThat(caseSearchAuditList.get(20).getCaseRefs().size()).isEqualTo(2);
+        assertThat(caseSearchAuditList.get(20).getCaseRefs()).hasSize(2);
         assertThat(caseSearchAuditList.get(20).getCaseRefs().get(0)).isEqualTo(3L);
         assertThat(caseSearchAuditList.get(20).getCaseRefs().get(1)).isEqualTo(4L);
     }
@@ -135,7 +132,7 @@ class CaseSearchAuditRepositoryTest {
     @Test
     void shouldDeleteCaseSearchAudit() {
         final Timestamp timestamp = valueOf(now());
-        List<Long> caseRefs = Arrays.asList(3L);
+        List<Long> caseRefs = List.of(3L);
         final CaseSearchAudit caseSearchAudit = new CaseSearchAudit("3333", timestamp, caseRefs);
 
         caseSearchAuditRepository.save(caseSearchAudit);
@@ -147,10 +144,10 @@ class CaseSearchAuditRepositoryTest {
                         valueOf(now().plusDays(50)),
                         getPage());
 
-        assertThat(caseSearch.getContent().size()).isEqualTo(1);
-        assertThat(caseSearch.getContent().get(0).getUserId()).isEqualTo("3333");
+        assertThat(caseSearch.getContent()).hasSize(1);
+        assertThat(caseSearch.getContent().getFirst().getUserId()).isEqualTo("3333");
 
-        caseSearchAuditRepository.deleteById(caseSearch.getContent().get(0).getId());
+        caseSearchAuditRepository.deleteById(caseSearch.getContent().getFirst().getId());
 
         final Page<CaseSearchAudit> caseSearch1 = caseSearchAuditFindCaseRepository
                 .findCaseSearch("3333",
@@ -158,7 +155,7 @@ class CaseSearchAuditRepositoryTest {
                         valueOf(now().minusDays(50)),
                         valueOf(now().plusDays(50)), getPage());
 
-        assertThat(caseSearch1.getContent().size()).isEqualTo(0);
+        assertThat(caseSearch1.getContent()).isEmpty();
     }
 
     @SuppressWarnings("PMD.DataflowAnomalyAnalysis")
